--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,15 +2,20 @@
 layout: default
 ---
 <!-- page.html -->
-        <div class="post">
+<div class="post">
 
-          <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
-            <p class="post-description">{{ page.description }}</p>
-          </header>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-description">{{ page.description }}</p>
+  </header>
 
-          <article>
-            {{ content }}
-          </article>
+  <article>
+    {{ content }}
+  </article>
 
-        </div>
+  <!-- Selected papers -->
+  {% if page.selected_papers -%}
+  <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Selected Publications</a></h2>
+  {%- include selected_papers.html %}
+  {%- endif %}
+</div>
